# ConcurrentProgramming-Homework

./: README.md
homework_01/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
homework_01/config_tcp/: Dockerfile
homework_01/config_udp/: Dockerfile
homework_01/documentation/: documentation.docx
homework_01/src/: client.cpp  server.cpp
homework_01/src/const/: const.h
homework_01/src/service/: client.cpp  client.h  server.cpp  server.h  util.cpp  util.h
homework_02/: BasicReport.docx  Report.docx  cloud-architecture.drawio
homework_02/FrontEndResponseGraphicGen/: main.py
homework_02/LogGraphic/: input.txt  main.py
homework_02/backend-service/: README.md  package.json
homework_02/backend-service/src/: populate.sql  server.ts
homework_02/backend-service/src/__tests__/: database.service.spec.ts
homework_02/backend-service/src/interfaces/: interfaces.ts
homework_02/backend-service/src/service/: persistence.service.ts
homework_02/backend-service/src/socket/: events.ts  socket.ts
homework_02/frontend/: .gitignore  package.json
homework_02/frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
homework_04/: .gitignore  README.md  package.json
homework_04/DSU-Explorer-CLI/: .gitignore  octopus-freeze.json
homework_04/DSU-Explorer-CLI/apihub-root/: initialEncryptionTest
homework_04/DSU-Explorer-CLI/src/: main.js
homework_04/apihub-root/: initialEncryptionTest
homework_04/default-loader-config-files/: environment.js
homework_04/src/: main.js
(+38 files in other folders)
